# chim

./: .gitattributes  .gitignore  .rusty-hook.toml  .travis.yml  Cargo.toml  Cross.toml  LICENSE  README.md  RELEASING.md
.config/: nextest.toml
.github/workflows/: chim.yml
example/: abs  err  gcs  gz  hooks  jq  multiarch  node  node.bat  s3  scp  shellcheck  shfmt  xz
example/.multiarch/: linux  macos
packaging/chimstrap/: chimstrap.envsubst
packaging/deb/: Dockerfile  generate-release.sh
packaging/macos/: chim.provisioningprofile.gpg  homebrew.rb  macos.developerprofile.gpg
packaging/rpm/: Dockerfile  chim.repo  chim.spec  rpmmacros
packaging/win/: setup.iss
scripts/: build-deb  build-deb.sh  build-rpm  build-rpm.sh  build-tarball  build-tarball.sh  build-windows.ps1  build-zip  release.sh  render-chimstrap  render-chimstrap.sh  render-homebrew.sh
share/: chimstrap.envsubst
src/: app.rs  archive.rs  bin.rs  checksum.rs  chim_file.rs  config.rs  env.rs  hooks.rs  logger.rs  main.rs  platform.rs  util.rs
src/cli/: checksum.rs  checksums.rs  mod.rs  run.rs  usage.rs  version.rs
src/fetchers/: abs.rs  gcs.rs  http.rs  mod.rs  s3.rs  scp.rs
test/fixtures/: hooks
