[package]
name = "chim"
version = "1.1.1"
edition = "2021"
description = "Cross-platform binary shims with optional remote fetching."
authors = ["Jeff Dickey (@jdxcode)"]
homepage = "https://chim.sh"
documentation = "https://chim.sh"
repository = "https://github.com/jdxcode/chim"
readme = "README.md"
license = "MIT"
keywords = ["shim"]
categories = ["command-line-utilities", "development-tools::build-utils"]
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.4"
clap = { version = "4.2.5", features = ["derive"] }
color-eyre = "0.6.2"
dirs = "5.0.1"
env_logger = "0.10.0"
flate2 = "1.0.26"
hex = "0.4.3"
indicatif = "0.17.3"
itertools = "0.10.5"
log = "0.4.17"
reqwest = {version = "0.11.17", features = ["rustls-tls"], default-features = false}
serde = "1.0.163"
serde_derive = "1.0.163"
sha2 = "0.10.6"
tar = "0.4.38"
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["full"] }
toml = "0.7.4"
toml_edit = "0.19.8"
xz = "0.1.0"
zip = {version = "0.6.5", default-features = false, features = ["deflate"]}

[target.'cfg(unix)'.dependencies]
exec = "0.3.1"

[features]
test-e2e = [] # run e2e tests

[dev-dependencies]
test-case = "3.1.0"
rand = "0.8.5"
pretty_assertions = "1.3.0"

[profile.release]
opt-level = "z" # optimize for size
lto = true
debug = false
debug-assertions = false
panic = "abort"
strip = "symbols"

[package.metadata.release]
allow-branch = ["master"]
sign-tag = true
sign-commit = true
pre-release-replacements = [
    {file="README.md", search="^chim [0-9]+.[0-9]+.[0-9]+(-alpha.[0-9]+)?$", replace="chim {{version}}"},
    {file="packaging/rpm/chim.spec", search="^Version: [0-9]+.[0-9]+.[0-9]+(-alpha.[0-9]+)?$", replace="Version: {{version}}"},
    {file="packaging/win/setup.iss", search="^AppVersion=[0-9]+.[0-9]+.[0-9]+(-alpha.[0-9]+)?$", replace="AppVersion={{version}}"},
]
